@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=Calculator
 _Comment=Perform simple calculations
 Exec=gnome-calculator
