@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=Character Map
 _Comment=Insert special characters into documents
 Exec=gnome-character-map
