@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=Search for Files
 _Comment=Search your disk for files
 Exec=gnome-search-tool
