@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=GNOME Search Tool
 _Comment=GNOME Search Tool
 Exec=gsearchtool
