@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=Time tracking tool
 _Comment=Time Tracker tool
 Exec=gtt
