@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=System Log
 _Comment=View the system log file
 Exec=gnome-system-log
