@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=Archive Generator
 _Comment=Create compressed archives containing many files
 Exec=archive-generator
