@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=Color Browser
 _Comment=Browse available X11 colors.
 Exec=gcolorsel
