@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=Font Selector
 _Comment=Select a font for pasting
 Exec=gfontsel
