@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=Stripchart
 _Comment=Shows a stripchart plot
 Exec=stripchart-applet
