@@ -1,4 +1,5 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=Stripchart Plotter
 _Comment=Stripchart Plotter
 Exec=stripchart
