@@ -1,3 +1,9 @@
+Fri Jul 12 10:18:22 2002  George Lebl <jirka@5z.com>
+
+	* **/*.desktop.in:  Add "Encoding=UTF-8" as per the standard,
+	  the standards police kicked in my door and forced me to do this
+	  I swear!
+
 2002-07-05  Glynn Foster <glynn.foster@sun.com>
 
 	* splash/*: Remove cruft.
